--- a/wejangan.html
+++ b/wejangan.html
@@ -94,12 +94,12 @@
     <script>
       function displayMotivation() {
     var motivations = [
-      // "Belajar adalah jalan menuju keberhasilan.",
-      // "Belajar tanpa kerja keras sama saja dengan berjudi.",
-      // "Belajar adalah kunci keberhasilan.",
-      // "Belajar adalah cara untuk membuka pintu masa depan yang cerah.",
-      // "Belajar adalah investasi terbaik untuk masa depanmu.",
-      // "Kelulusan itu membuat seorang tidak lagi dapat menikmati belajar (Jundi).",
+      "Belajar adalah jalan menuju keberhasilan.",
+      "Belajar tanpa kerja keras sama saja dengan berjudi.",
+      "Belajar adalah kunci keberhasilan.",
+      "Belajar adalah cara untuk membuka pintu masa depan yang cerah.",
+      "Belajar adalah investasi terbaik untuk masa depanmu.",
+      "Kelulusan itu membuat seorang tidak lagi dapat menikmati belajar (Jundi).",
       "Diam tolah-toleh, Bergerak salah kabeh.",
       "Kenapa ayam kakinya dua? karna aku mencintai Allah SWT.",
       "Setiap ada kelebihan, pasti ada kembalian.",
