--- a/wejangan.html
+++ b/wejangan.html
@@ -18,6 +18,15 @@
     </div>
      
       <style>
+
+.jumbotron {
+  background-color: #fff;
+background-image:
+linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
+linear-gradient(#eee .1em, transparent .1em);
+background-size: 100% 1.2em;
+}
+
         /* tombol neumorphism */
         .btn {
   min-width:150px ;
